--- a/JakartaLearningProject/Base.lproj/Main.storyboard
+++ b/JakartaLearningProject/Base.lproj/Main.storyboard
@@ -587,8 +587,8 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BzQ-gU-AbU">
                                 <rect key="frame" x="0.0" y="88" width="414" height="712"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uIJ-tV-Wvo">
-                                        <rect key="frame" x="0.0" y="-44" width="414" height="896"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uIJ-tV-Wvo">
+                                        <rect key="frame" x="0.0" y="-44" width="414" height="800"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jmF-Cx-1Io">
                                                 <rect key="frame" x="0.0" y="59" width="414" height="214"/>
@@ -616,9 +616,34 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Information" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hv-0I-J9q">
-                                                <rect key="frame" x="35" y="373.5" width="344" height="20.5"/>
+                                                <rect key="frame" x="35" y="370.5" width="344" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What to do" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nof-sX-mxx">
+                                                <rect key="frame" x="13" y="404" width="94" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What to do" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SCO-fC-qdd">
+                                                <rect key="frame" x="35" y="437" width="344" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hWB-Kg-5jS">
+                                                <rect key="frame" x="35" y="503.5" width="91" height="30"/>
+                                                <state key="normal" title="Get Direction"/>
+                                                <connections>
+                                                    <action selector="locationButton:" destination="1OZ-pV-MlG" eventType="touchUpInside" id="dGc-CL-Go8"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Direction" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zm6-Ww-o4u">
+                                                <rect key="frame" x="13" y="470.5" width="77" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -626,11 +651,20 @@
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="jmF-Cx-1Io" secondAttribute="trailing" id="3YH-d9-R6w"/>
                                             <constraint firstItem="jmF-Cx-1Io" firstAttribute="top" secondItem="uIJ-tV-Wvo" secondAttribute="top" constant="59" id="6e1-2L-nNO"/>
+                                            <constraint firstItem="SCO-fC-qdd" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="35" id="7CD-vc-qfz"/>
                                             <constraint firstAttribute="trailing" secondItem="7Hv-0I-J9q" secondAttribute="trailing" constant="35" id="GmL-OW-Xos"/>
-                                            <constraint firstItem="7Hv-0I-J9q" firstAttribute="top" secondItem="TBG-5U-H1e" secondAttribute="bottom" constant="13" id="Y5Q-bC-1QI"/>
+                                            <constraint firstItem="hWB-Kg-5jS" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="35" id="J1o-M7-ob8"/>
+                                            <constraint firstAttribute="trailing" secondItem="SCO-fC-qdd" secondAttribute="trailing" constant="35" id="PKi-TO-dJq"/>
+                                            <constraint firstItem="SCO-fC-qdd" firstAttribute="top" secondItem="nof-sX-mxx" secondAttribute="bottom" constant="10" id="PzR-4R-cUg"/>
+                                            <constraint firstItem="zm6-Ww-o4u" firstAttribute="top" secondItem="SCO-fC-qdd" secondAttribute="bottom" constant="13" id="VAe-XP-ovn"/>
+                                            <constraint firstItem="7Hv-0I-J9q" firstAttribute="top" secondItem="TBG-5U-H1e" secondAttribute="bottom" constant="10" id="Y5Q-bC-1QI"/>
+                                            <constraint firstItem="nof-sX-mxx" firstAttribute="top" secondItem="7Hv-0I-J9q" secondAttribute="bottom" constant="13" id="aQf-ze-buk"/>
+                                            <constraint firstItem="hWB-Kg-5jS" firstAttribute="top" secondItem="zm6-Ww-o4u" secondAttribute="bottom" constant="10" id="ciw-F7-uv5"/>
+                                            <constraint firstItem="nof-sX-mxx" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="13" id="fQz-xU-Vhj"/>
                                             <constraint firstItem="vk0-fS-R0y" firstAttribute="top" secondItem="jmF-Cx-1Io" secondAttribute="bottom" constant="20" id="hfL-M8-IBb"/>
                                             <constraint firstItem="7Hv-0I-J9q" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="35" id="npN-vI-LsR"/>
                                             <constraint firstAttribute="trailing" secondItem="vk0-fS-R0y" secondAttribute="trailing" constant="20" id="pHL-GD-6VR"/>
+                                            <constraint firstItem="zm6-Ww-o4u" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="13" id="rBI-vH-LV4"/>
                                             <constraint firstItem="vk0-fS-R0y" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="20" id="sUR-fp-liu"/>
                                             <constraint firstItem="TBG-5U-H1e" firstAttribute="top" secondItem="vk0-fS-R0y" secondAttribute="bottom" constant="13" id="tDN-fM-dvh"/>
                                             <constraint firstItem="TBG-5U-H1e" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="13" id="u8y-Iw-Tka"/>
@@ -665,6 +699,7 @@
                         <outlet property="image" destination="jmF-Cx-1Io" id="dNQ-BW-4CE"/>
                         <outlet property="informationLabel" destination="7Hv-0I-J9q" id="brk-H5-v1W"/>
                         <outlet property="titleLabel" destination="vk0-fS-R0y" id="jL6-DP-7QH"/>
+                        <outlet property="toDoLabel" destination="SCO-fC-qdd" id="Fmf-CD-xDA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sb3-Ep-ju2" userLabel="First Responder" sceneMemberID="firstResponder"/>
